--- a/src/views/partials/auth-footer.ejs
+++ b/src/views/partials/auth-footer.ejs
@@ -12,12 +12,12 @@
             </a>
             <span class="mx-3">|</span>
             <div class="social-links">
-              <a href="https://github.com/thangnpq" class="text-secondary me-3" target="_blank">
+              <a href="https://github.com/UnFameeee" class="text-secondary me-3" target="_blank">
                 <i class="fab fa-github"></i>
               </a>
-              <a href="https://twitter.com/thangnpq" class="text-secondary me-3" target="_blank">
+              <!-- <a href="https://twitter.com/thangnpq" class="text-secondary me-3" target="_blank">
                 <i class="fab fa-twitter"></i>
-              </a>
+              </a> -->
               <a href="https://linkedin.com/in/thangnpq" class="text-secondary" target="_blank">
                 <i class="fab fa-linkedin"></i>
               </a>
