--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -205,45 +205,50 @@
   </style>
 </head>
 <body>
-  <!-- Navbar -->
+  <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="/">Planner Buddy</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <a class="navbar-brand" href="/"><i class="fas fa-calendar-check me-2"></i>Planner Buddy</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item user-menu">
-            <a class="nav-link" href="/todos/all"><i class="fas fa-tasks"></i> Todos</a>
-          </li>
-          <li class="nav-item user-menu">
-            <a class="nav-link" href="/appointments/calendar"><i class="far fa-calendar-alt"></i> Calendar</a>
-          </li>
-          <li class="nav-item user-menu">
-            <a class="nav-link" href="/dashboard/statistics"><i class="fas fa-chart-bar"></i> Statistics</a>
-          </li>
+          <% if (typeof user !== 'undefined' && user) { %>
+            <li class="nav-item">
+              <a class="nav-link" href="/dashboard">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/todos/all">Todos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/appointments/calendar">Appointments</a>
+            </li>
+          <% } %>
         </ul>
-        <ul class="navbar-nav">
-          <li class="nav-item admin-menu d-none">
-            <a class="nav-link" href="/settings/view/admin"><i class="fas fa-cog"></i> Settings</a>
-          </li>
-          <li class="nav-item dropdown user-dropdown d-none">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              <i class="fas fa-user"></i> <span id="headerUsername"></span>
-            </a>
-            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="/auth/profile"><i class="fas fa-id-card"></i> Profile</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#" id="logoutBtn"><i class="fas fa-sign-out-alt"></i> Logout</a></li>
-            </ul>
-          </li>
-          <li class="nav-item guest-menu">
-            <a class="nav-link" href="/auth/login"><i class="fas fa-sign-in-alt"></i> Login</a>
-          </li>
-          <li class="nav-item guest-menu">
-            <a class="nav-link" href="/auth/register"><i class="fas fa-user-plus"></i> Register</a>
-          </li>
+        <ul class="navbar-nav ms-auto">
+          <% if (typeof user !== 'undefined' && user) { %>
+            <!-- User is logged in -->
+            <li class="nav-item dropdown user-dropdown user-menu">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <i class="fas fa-user-circle me-1"></i> <span id="headerUsername"><%= user.username %></span>
+              </a>
+              <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/profile"><i class="fas fa-user me-2"></i>Profile</a></li>
+                <li><a class="dropdown-item" href="/settings"><i class="fas fa-cog me-2"></i>Settings</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#" id="logoutBtn"><i class="fas fa-sign-out-alt me-2"></i>Logout</a></li>
+              </ul>
+            </li>
+          <% } else { %>
+            <!-- Guest menu -->
+            <li class="nav-item guest-menu">
+              <a class="nav-link" href="/auth/login"><i class="fas fa-sign-in-alt me-1"></i> Login</a>
+            </li>
+            <li class="nav-item guest-menu">
+              <a class="nav-link" href="/auth/register"><i class="fas fa-user-plus me-1"></i> Register</a>
+            </li>
+          <% } %>
         </ul>
       </div>
     </div>
